--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body>
     <title>My project</title>
     <body>
-        <h1>Hello LnB</h1>
+        <h1>Hello, i am mona</h1>
     </body>
 </body>
